--- a/src/scss/blocks/main-nav.scss
+++ b/src/scss/blocks/main-nav.scss
@@ -3,7 +3,7 @@
   left: 50%;
   z-index: 1;
   transform: translate(-50%);
-  width: 1170px;
+  width: $page-layout-width;
   margin: 0 auto;
   margin-top: 25px;
   display: flex;
