--- a/src/scss/blocks/slide.scss
+++ b/src/scss/blocks/slide.scss
@@ -1,5 +1,6 @@
 .slide {
   min-height: 930px;
+  min-width: 1220px;
   width: 100%;
   background: $color-gray url($base-url + 'bg-main.jpg') 50% 50% no-repeat;
   background-size: 1920px 930px;
