--- a/src/scss/blocks/slider.scss
+++ b/src/scss/blocks/slider.scss
@@ -5,4 +5,34 @@
   justify-content: center;
   align-items: center;
   color: $base-font-color-inverse;
+  &__controls {
+    position: absolute;
+    left: 50%;
+    bottom: 50px;
+    transform: translateX(-50%);
+    font-size: 0;
+    width: 80px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+  &__label {
+    display: block;
+    width: 12px;
+    height: 12px;
+    background-color: $base-font-color-inverse;
+    border-radius: 50%;
+  }
+  &__control {
+    display: none;
+  }
+  &__control:checked + &__label {
+    display: block;
+    width: 12px;
+    height: 12px;
+    background-color: transparent;
+    border: 2px solid $base-font-color-inverse;
+    border-radius: 50%;
+  }
 }
