--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -7,6 +7,7 @@
 @import './blocks/main-nav';
 @import './blocks/slider';
 @import './blocks/slide';
+@import './blocks/latest';
 
 body {
   font-family: $font-opensans;
@@ -26,5 +27,10 @@ a {
 }
 
 .fake {
-  background-image: url($base-url + 'icon-logo.png');
+  background-image: url($base-url + 'icon-logo.png'),
+    url($base-url + 'img-40percent-off.jpg'),
+    url($base-url + 'img-megasale.jpg'),
+    url($base-url + 'img-woman.jpg'),
+    url($base-url + 'img-watches.jpg')
+    url($base-url + 'img-men.jpg');
 }
