--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -3,3 +3,33 @@
   align-items: center;
   justify-content: center;
 }
+
+@mixin styles-h2 {
+  margin:60px 0;
+  padding-top: 25px;
+  padding-bottom: 25px;
+  display: inline-block;
+  vertical-align: baseline;
+  position: relative;
+  font-size: $font-size-h2;
+  font-weight: 100;
+  font-style: italic;
+  text-align: center;
+  &::before {
+    position: absolute;
+    content: '';
+    display: block;
+    top:0;
+    left: 50%;
+    transform: translateX(-50%);
+    width: 110px;
+    height: 100%;
+    border-top: 2px solid $border-color;
+    border-bottom: 2px solid $border-color;
+  }
+}
+
+@mixin wrapper {
+  width: $page-layout-width;
+  margin: 0 auto;
+}
