--- a/src/jade/index.jade
+++ b/src/jade/index.jade
@@ -57,5 +57,44 @@ html(lang="en")
               li.latest__item
                 a.latest__lnk(href="#" aria-label="MEGA SALE ON ITEMS FROM SPIRIT COLLECTION")
                   img.latest__img(src="img/img-megasale.jpg" width="570" height="418" alt="40 percent off")
+        section.tranding
+          h2.tranding__title Trending Items
+          .tranding-slider
+            .tranding-slider__slide
+              img.tranding-slider__img(src="img/img-goods.jpg" width="570" height="570" alt="NATHAN STEWART JACKET")
+              .tranding-slider__card
+                h3.tranding-slider__title NATHAN STEWART JACKET
+                p.tranding-slider__topic Summer/Autumn Collection
+                p.tranding-slider__description.tranding-slider__description--p1
+                  | Classic Nathan Stewart Jacket from his latest collection.
+                  | This item is loved by many just because of it’s simle style.
+                  | Simple lines,lovely texture,it suits almost everybody.
+                  | It comes in six different colors,and all sizes.
+                p.tranding-slider__description.tranding-slider__description--upper FASHION TIP:
+                p.tranding-slider__description With this jacket,Nathan Stewart sunglasses go hand in hand!
+                ul.tranding-slider__sizes
+                  li.tranding-slider__size
+                    a(href="#") ML
+                  li.tranding-slider__size.tranding-slider__size--active
+                    a(href="#") L
+                  li.tranding-slider__size
+                    a(href="#") XL
+                  li.tranding-slider__size
+                    a(href="#") XXL
+                  li.tranding-slider__btn
+                    a(href="#") Shop now
+                  li.tranding-slider__btn
+                    a(href="#") Size Guide
+            .tranding-slider__controls
+              input#slide5.tranding-slider__control(type="radio" name="tranding-slider")
+              label.tranding-slider__label(for="slide5") Slide5
+              input#slide6.tranding-slider__control(type="radio" name="tranding-slider")
+              label.tranding-slider__label(for="slide6") Slide6
+              input#slide7.tranding-slider__control(type="radio" name="tranding-slider" checked)
+              label.tranding-slider__label(for="slide7") Slide7
+              input#slide8.tranding-slider__control(type="radio" name="tranding-slider")
+              label.tranding-slider__label(for="slide8") Slide8
+FASHION TIP:
+With this jacket,Nathan Stewart sunglasses go hand in hand!
       footer.main-footer
         .main-footer__layout
