--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,9 @@
 /* Определяем цвета */
 
 $color-gray: #97989d;
+$color-light-gray: #777777;
+$color-light-gray1: #afafaf;
+$color-dark-black: #000000;
 $color-black: #333333;
 $color-white: #ffffff;
 $color-blue: #222533;
@@ -11,7 +14,7 @@ $font-lato: 'Lato', Arial, sans-serif;
 $base-font-size: 18px;
 $font-size-h1: 48px;
 $font-size-h2: 40px;
-$font-size-h3: 20px;
+$font-size-h3: 30px;
 $base-font-color: $color-black;
 $base-font-color-inverse: $color-white;
 $menu-color-link: $color-white;
