--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -3,6 +3,7 @@
 $color-gray: #97989d;
 $color-light-gray: #777777;
 $color-light-gray1: #afafaf;
+$color-light-gray2: #ecf0f1;
 $color-dark-black: #000000;
 $color-black: #333333;
 $color-white: #ffffff;
