--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,6 +10,11 @@
 @import './blocks/latest';
 @import './blocks/tranding';
 @import './blocks/tranding-slider';
+@import './blocks/blog';
+@import './blocks/blog-slider';
+@import './blocks/blog-slide';
+@import './blocks/subscribe';
+@import './blocks/main-footer';
 
 body {
   font-family: $font-opensans;
@@ -35,5 +40,7 @@ a {
     url($base-url + 'img-woman.jpg'),
     url($base-url + 'img-watches.jpg'),
     url($base-url + 'img-goods.jpg'),
+    url($base-url + 'img-blog1.jpg'),
+    url($base-url + 'img-blog2.jpg'),
     url($base-url + 'img-men.jpg');
 }
