--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -41,6 +41,7 @@ a {
     url($base-url + 'img-watches.jpg'),
     url($base-url + 'img-goods.jpg'),
     url($base-url + 'img-blog1.jpg'),
+    url($base-url + 'icon-arrow.png'),
     url($base-url + 'img-blog2.jpg'),
     url($base-url + 'img-men.jpg');
 }
