--- a/src/scss/blocks/blog.scss
+++ b/src/scss/blocks/blog.scss
@@ -1,8 +1,10 @@
 .blog {
   margin-bottom: 60px;
+  margin-top: -58px;
   &__layout {
     @include wrapper;
     text-align: center;
+    margin-bottom: 10px;
   }
   &__title {
     @include styles-h2;
