--- a/src/scss/blocks/slide.scss
+++ b/src/scss/blocks/slide.scss
@@ -24,13 +24,14 @@
     margin: 0;
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: flex-start;
     align-items: center;
     text-align: center;
     min-height: 300px;
   }
   &__row1 {
     margin: 0;
+    margin-bottom: 72px;
     font-weight: 100;
     font-size: 30px;
     line-height: .63;
@@ -39,6 +40,7 @@
   }
   &__row2 {
     margin: 0;
+    margin-bottom: 54px;
     font-weight: 700;
     font-size: 60px;
     line-height: .32;
@@ -46,6 +48,7 @@
   }
   &__row3 {
     margin: 0;
+    margin-bottom: 53px;
     font-weight: 100;
     font-size: 30px;
     line-height: 1.2;
