--- a/src/scss/blocks/tranding-slider.scss
+++ b/src/scss/blocks/tranding-slider.scss
@@ -21,7 +21,10 @@
     font: 700 #{$font-size-h3} / 1.3 $font-lato;
     color: $color-red;
     text-transform: uppercase;
-    margin: 25px 0;
+    margin: 0;
+    margin-top: 25px;
+    margin-bottom: 13px;
+    letter-spacing: 0;
   }
   & p {
     margin: 0;
@@ -32,19 +35,20 @@
       content: '';
       display: block;
       background-color: $color-dark-black;
-      width: 30px;
+      width: 32px;
       height: 1px;
-      margin-top: 30px;
+      margin-top: 23px;
       margin-bottom: 28px;
     }
   }
   & &__description--p1 {
-    margin-bottom: 35px;
+    margin-bottom: 21px;
+    line-height: 1.33;
   }
   &__sizes {
     margin: 0;
     padding: 0;
-    padding-top: 22px;
+    padding-top: 65px;
     padding-bottom: 30px;
     max-width: 370px;
     list-style: none;
@@ -86,6 +90,7 @@
     color: $color-black;
     text-align: center;
     border: 1px solid $color-black;
+    letter-spacing: .005em;
   }
   &__controls {
     margin: 55px 0;
