--- a/src/scss/blocks/tranding.scss
+++ b/src/scss/blocks/tranding.scss
@@ -1,7 +1,7 @@
 .tranding {
   width: 100%;
   min-height: 920px;
-  background: url($base-url + 'bg-tranding.jpg') 0 0 no-repeat;
+  background: #f3f3f3 url(/brandly2/img/bg-tranding.jpg) 50% 0 no-repeat;
   text-align: center;
   &__title {
     @include styles-h2;
